Bug 370852. Misc nsPrintEngine fixes/cleanups.r+sr=roc.